--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <h1>📩 SkillUp Mentor - Sistema de Chats</h1>
+    <button id="button-login">Inciar Sesion</button>
   </header>
 
   <main id="app">
