Insertada funcionalidad de Login y Logout, para acceder al CRUD de Usuarios

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
   <header>
     <h1>📩 SkillUp Mentor - Sistema de Chats</h1>
-    <button id="button-login">Inciar Sesion</button>
+
+    <!-- Botón dinámico de sesión -->
+    <div id="session-area">
+      <button id="button-login">Iniciar Sesión</button>
+    </div>
   </header>
 
   <main id="app">
