añadida ventana estetica para mostrar mentores junto con sus datos de usuario, ademas de agregada implementacion de recepcion e impresion de imagenes de perfil

--- a/interfaces/login/login.html
+++ b/interfaces/login/login.html
@@ -8,7 +8,7 @@
       <label for="password">Password:</label>
       <input type="password" id="password" required />
 
-      <button type="submit">Submit</button>
+      <button type="submit">Enviar</button>
     </form>
 
   </div>
