--- a/interfaces/user/userList.html
+++ b/interfaces/user/userList.html
@@ -5,6 +5,7 @@
     <thead>
       <tr>
         <th>ID</th>
+        <th>Foto</th>
         <th>Nombre</th>
         <th>Email</th>
         <th>Rol</th>
