--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <header>
-    <h1>📩 SkillUp Mentor - Sistema de Chats</h1>
+    <h1>SkillUp Mentor</h1>
+
+    <nav id="navbar">
+    </nav>
 
     <!-- Botón dinámico de sesión -->
     <div id="session-area">
@@ -20,6 +23,14 @@
     <!-- Aquí se cargará la interfaz -->
     <div id="chat-container"></div>
   </main>
+
+  <div id="modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5);">
+    <div id="close" style="background-color: white; position: absolute; top: 10px; right: 10px;">
+      <button id="CloseModal">Cerrar</button> 
+    </div>
+    <div id="modal-content" style="background-color: white; margin: 10% auto; padding: 20px; width: 50%; position: relative;">
+    </div>
+  </div>
 
   <footer>
     <p>© 2025 SkillUp Mentor</p>
